Tests/Error/Mixed/.build/mixedcatcher.pr
{
  "name": "MixedCatcher",
  "description": "Sets %mixedCaught% to true (null comparison marker in the step text is ignored by the compiler).",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %mixedCaught% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%mixedCaught%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/MixedCatcher.goal",
  "prPath": "/.build/mixedcatcher.pr",
  "hash": "a0848b3b32f6aca7e670247d79e5ae4b3856ac7f6beaf496c5b132e23a2daa67",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}